--- a/第一周/01.md
+++ b/第一周/01.md
@@ -1,7 +1,28 @@
 
+###做题
 ####第1题
 题目:26  删除有序数组重复项
 https://github.com/vincepeng/algo_2021/blob/main/tmp/leetcode/editor/cn/%5B26%5D%E5%88%A0%E9%99%A4%E6%9C%89%E5%BA%8F%E6%95%B0%E7%BB%84%E4%B8%AD%E7%9A%84%E9%87%8D%E5%A4%8D%E9%A1%B9.java
 ####第2题
+https://github.com/vincepeng/algo_2021/blob/main/tmp/leetcode/editor/cn/%5B1%5D%E4%B8%A4%E6%95%B0%E4%B9%8B%E5%92%8C.java
+
+###总结
+做题总结:
+    本周就选择了最简单的,以及最暴力的方法,主要考虑第一周以及时间问题,下周加深难度;
+学到的东西:
+    学习了很多"捕鱼"的方法,四步法(读题,罗列解法,做,校验) 五遍刻意练习
+    一些算法方法论:空间换时间,升纬度,最小重复单元,最近相关性
+    以前看过<异类>就是一万小时理论,但是对立面的几步法没印象了(捏碎,刻意练习,feedback)
+心态上的变化
+    1.以前是恐惧,听完感觉可以慢慢来,本来都难,不着急;
+    2.中国鼓励那种冥思苦想,其实算法"个人"思考是适可而止就可.这个是以前学习的误区;
+
+改进的点:
+    本周看其他知识太多,算法就周天下午看了下,下周可以早点看,这样可以多做点题目;
+    重点是学习好的解法,也就是第二遍和第三遍等往往比第一遍更重要.要分清重点;
+其它感想
+    虽然课程偏贵,但是整体感觉还是值得的,学习是ROI最高的投资
+    ps:我喜欢语速快的老师
+
 
 
